--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,19 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0"
+actix-rt = "2.6"
+diesel = { version = "2.0", features = ["postgres"] }
+dotenv = "0.15"
+jsonwebtoken = "8.2"
+bcrypt = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-dotenv = "0.15"
-jwt-simple = "9.1"
-diesel = { version = "1.4", features = ["sqlite", "chrono"] }
+lettre = "0.10"
+twilio = "0.7"
+web-push = "0.8"
+uuid = "1.1"
+chrono = "0.4"
+
 
 [[bin]]
 name = "mybinary"
